# rt-one-week-rust

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  benchmarks.json  benchmarks.sh  do-profiled-render.sh  do-profiled-render2.sh  do-render.sh
.github/workflows/: rust.yml
src/: aabb.rs  bvh.rs  camera.rs  consts.rs  hittable.rs  main.rs  material.rs  noise.rs  onb.rs  pdf.rs  random.rs  random2.rs  ray.rs  sampler.rs  scatter.rs  scenes.rs  texture.rs  types.rs  vec.rs
src/hittable/: aabox.rs  aarect.rs  constant_medium.rs  instance.rs  list.rs  mod.rs  moving_sphere.rs  no_hit.rs  sphere.rs
src/hittable/instance/: isometry.rs  mod.rs  rotation.rs  translation.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/pdf/: cosine.rs  hittable.rs  isotropic.rs  mixture.rs  mod.rs
src/renderer/: mod.rs  monte_carlo_brure_force.rs  monte_carlo_importance.rs  rgb_renderer.rs  rgb_renderer_unbiased.rs  ttl_renderer.rs
src/scenes/: book.rs  cornel_box.rs  image.rs  mod.rs  perlin.rs
src/texture/: checker.rs  color.rs  image.rs  mod.rs  perlin.rs
