[package]
name = "rust-rt-one-weekend"
version = "0.1.0"
authors = ["pavel <pavel.remygailo+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
rand_xoshiro = "0.4.0"
interpolation = "0.2.0"
rand_distr = "0.2.2"
image="0.22.*"
rayon = "1.2.*"
itertools = "0.8.*"
structopt = { version = "0.3", default-features = false }

[features]
simd = []
default = []
