[package]
name = "rust-rt-one-weekend"
version = "0.1.0"
authors = ["pavel <pavel.remygailo+github@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
interpolation = "0.2"
rand_distr = "0.4"
image="0.24"
rayon = "1.5"
itertools = "0.10"
structopt = { version = "0.3", default-features = false }
nalgebra = "0.31"
crossbeam = { version = "0.8" }
simba = {version = "0.7", features = ["wide"]}

[features]
simd = []
metrics = []
default = ["metrics"]

[profile.release]
panic = "abort"
